--- a/lym/lym.csproj
+++ b/lym/lym.csproj
@@ -253,6 +253,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts2\gmail.js" />
     <Content Include="Scripts2\octopus.js" />
     <Content Include="Scripts2\tfs.js" />
     <Content Include="Scripts2\common.js" />
