--- a/lym/lym.csproj
+++ b/lym/lym.csproj
@@ -254,6 +254,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts2\gmail.js" />
+    <Content Include="Scripts2\jquerycookie.js" />
     <Content Include="Scripts2\octopus.js" />
     <Content Include="Scripts2\tfs.js" />
     <Content Include="Scripts2\common.js" />
