--- a/lym/lym.csproj
+++ b/lym/lym.csproj
@@ -257,6 +257,7 @@
     <Content Include="Scripts2\octopus.js" />
     <Content Include="Scripts2\jenkins.js" />
     <Content Include="Scripts2\environmentswitch.js" />
+    <Content Include="Scripts2\autocomplete.js" />
     <Content Include="Scripts2\tfs.js" />
     <Content Include="Scripts2\common.js" />
     <Content Include="Scripts2\jquery.js" />
